add start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A node test for the golf application",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chris Allen",
